[package]
name = "balance_watcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1" # Check for the latest version
web3 = "0.19.0" # For interacting with the Ethereum blockchain
mongodb = "2.8.1" # For MongoDB integration
tokio = { version = "1.36.0", features = ["full"] } # Async runtime, required by web3 and mongodb
serde = { version = "1.0", features = ["derive"] } # For serializing and deserializing data
serde_json = "1.0" # For working with JSON data